--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,7 +5,7 @@
 	border: none;
 	border-radius: 0px;
 	/* Slightly smaller consistent rounding for modules */
-	font-family: "JetBrainsMono Nerd Font", sans-serif;
+	font-family: "IosevkaTerm Nerd Font", sans-serif;
 	font-size: 16px;
 	font-weight: 700;
 	color: #FFFFFF;
